<resources>
    <string name="app_name">Hotellifyr</string>
    <string name="google_maps_key">AIzaSyCLtxhdWl3J6IYxJ4fj8P_fiTJekwqgoXE</string>
    <string name="find_your_hotel_easily_and_travel_anywhere_you_want_with_us"><![CDATA[Find your hotel easily & travel anywhere you want with us.]]></string>
    <string name="effortless_bookings_for_leisure_travel_or_business">Effortless Bookings for Leisure, Travel or Business</string>
    <string name="leisure">Leisure,</string>
    <string name="business">Business</string>
    <string name="lbl_bookings">Bookings</string>
    <string name="next">Next</string>
    <string name="login_or_signup">Login / Sign Up</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_manage_points_redeem_rewards_and_enjoy_member_only_discounts">Login to manage points, redeem rewards, and enjoy member-only discounts</string>
    <string name="request_otp">Request OTP</string>
    <string name="did_not_get_the_code_resend_it">Didn\'t get the code? Resend it</string>
    <string name="txt_continue">Continue</string>
    <string name="resend_it">Resend it</string>
    <string name="let_s_make_it_happen_together">Let’s Make it happen \nTogether!</string>
    <string name="create_an_account">Create an account</string>
    <string name="register">Register</string>
    <string name="i_agree_terms_conditions">I Agree Terms &amp; Conditions</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="mobile_validation">Please enter your mobile number</string>
    <string name="mobile_invalid">Please enter your valid mobile number</string>
    <string name="otp_validation">Please provide the OTP to verify your number.</string>
    <string name="otp_invalid">Invalid code. Please check and re-enter the OTP.</string>
    <string name="full_name_validation">Please enter full name</string>
    <string name="first_name_validation">Please enter first name</string>
    <string name="last_name_validation">Please enter last name</string>
    <string name="email_validation">Please enter email id.</string>
    <string name="email_invalid">Please enter valid email id.</string>
    <string name="address_validation">Please enter address</string>
    <string name="terms_and_condition_validation">Please accept the terms and conditions to continue</string>
    <string name="hotel_desc">
     Please note that check-in time is 2:00 PM and check-out time is 11:00 AM. Early check-in and late check-out are subject to availability. Guests are required to present a valid government ID at the time of arrival.
 </string>
    <string name="additional_charge_desc">
     Additional charges may apply for optional services such as airport transfers, extra guests, room upgrades, early check-in, late check-out, or other add-on experiences selected during your stay.
 </string>
    <string name="modifying_reservation_desc_review_reservation">
     Reservation changes are subject to availability and hotel policy. Modifications such as date changes, room upgrades, or guest updates may result in rate differences or additional charges.
 </string>
    <string name="hotel_message_desc">
     Please present a valid government-issued ID at check-in. Standard check-in time is 2:00 PM and check-out time is 11:00 AM. Early check-in and late check-out are subject to availability and may incur additional charges.
 </string>
    <string name="hint_enter_mobile_number">Enter Mobile Number</string>
    <string name="hint_enter_first_name">Enter first name</string>
    <string name="hint_enter_last_name">Enter last name</string>
    <string name="hint_enter_email_id">Enter email id</string>
    <string name="hint_enter_address">Enter address</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="are_you_sure_want_to_exit_app">Are you sure you want to exit the app?</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="search_places">Search Places\nDate Range • Number Of Guests</string>
    <string name="date_range_number_of_guests">Date Range • Number Of Guests</string>
    <string name="explore">Explore</string>
    <string name="nearby">Nearby</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="recently_search">Recently Search</string>
    <string name="recent_search_not_available">Recent search not available</string>
    <string name="create_your_wishlist">Create Your Wishlist</string>
    <string name="as_your_search_tap_heart_icon_to_save_your_favorite_hotels_to_a_wishlist">As your search, tap heart icon to save your favorite hotels to a wishlist.</string>
    <string name="get_started">Get Started</string>
    <string name="not_now">Not now</string>
    <string name="book_for_tonight">Book for Tonight</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="rooms_guests"><![CDATA[Rooms & Guests]]></string>
    <string name="discover_hotels">Discover Hotels</string>
    <string name="current_location">Current Location</string>
    <string name="points">Points</string>
    <string name="search_with_points"><![CDATA[Search with Points]]></string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="room_guests"><![CDATA[Room & Guests]]></string>
    <string name="map">Map</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="show_available_hotels_only">Show Available Hotels Only</string>
    <string name="hotel_type">Hotel Type</string>
    <string name="rating">Rating</string>
    <string name="never_miss_a_message">Never Miss a Message</string>
    <string name="enable_notification_for_personal_alerts_on_room_readiness_mobile_key_and_more">Enable notification for personal alerts on room readiness, Mobile key, and more.</string>
    <string name="enable_now">Enable Now</string>
    <string name="list">List</string>
    <string name="hot_selling">Hot Selling</string>
    <string name="royal_orchid_beach_resort_spa_goa"><![CDATA[Royal Orchid Beach Resort & Spa, Goa]]></string>
    <string name="what_we_offer">What We Offer</string>
    <string name="experience_world_class_service_at_royal_orchid_beach_resort_spa_goa"><![CDATA[Experience world-class service at Royal Orchid Beach Resort & Spa, Goa]]></string>
    <string name="drinking_dining"><![CDATA[Drinking & Dining]]></string>
    <string name="navigation">Navigation</string>
    <string name="copy_address">Copy Address</string>
    <string name="cancel">Cancel</string>
    <string name="open_in_google_maps">Open in Google Maps</string>
    <string name="get_directions">Get Directions</string>
    <string name="i_agree_to_the_privacy_policy_and_booking_terms_and_conditions">I agree to the Privacy policy and Booking Terms &amp; Conditions.</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="select_date">Select Date</string>
    <string name="confirm_reservation">Confirm Reservation</string>
    <string name="guest_details">Guest Details</string>
    <string name="minimum_stay_length">Minimum Stay Length</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="valid_stay_dates">Valid Stay Dates</string>
    <string name="how_to_book">How To Book</string>
    <string name="details">Details</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email ID</string>
    <string name="phone_no">Phone no.</string>
    <string name="food_drinks"><![CDATA[Food & Drinks]]></string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="save">Save</string>
    <string name="arts_culture"><![CDATA[Arts & culture]]></string>
    <string name="sports_wellness"><![CDATA[Sports & wellness]]></string>
    <string name="send_code">Send Code</string>
    <string name="choose_subscription_plan">Choose\nSubscription Plan</string>
    <string name="food_beverages"><![CDATA[Food & Beverages]]></string>
    <string name="select_dates">Select Dates</string>
    <string name="check_in">Check in</string>
    <string name="check_out">Check out</string>
    <string name="personal_info_desc">Manage your personal information to help us provide better service.</string>
    <string name="interest_desc">Select your interests to help us customize your travel experiences and recommendations.</string>
    <string name="payment_method_desc">Securely manage your saved cards and payment options for faster and easier bookings.</string>
    <string name="booking_history_desc">Review your past, upcoming, and cancelled hotel reservations all in one place.</string>
    <string name="confirm_identity_desc">Please provide your identification details to ensure a secure and verified check-in process.</string>
    <string name="food_drinks_desc">Discover a wide range of dining options, from local delicacies to international cuisines.</string>
    <string name="member_benefits_desc">Explore exclusive perks, discounts, and rewards available only to our valued members.</string>
    <string name="review_reservation_desc">Please review your booking details carefully before confirming your reservation.</string>
    <string name="room_preferences_desc">Tell us your room preferences to ensure your stay is as comfortable as possible.</string>
    <string name="special_request_desc">Let us know if you have any special requirements or requests for your upcoming stay.</string>
    <string name="transaction_history_desc">Keep track of all your past payments, refunds, and point redemptions easily.</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="rate_details">Rate Details</string>
    <string name="signature_suite">Signature Suite</string>
    <string name="member_rate">Member Rate</string>
    <string name="special_request">Special Request</string>
    <string name="rate_description">Rate Description</string>
    <string name="cancellation_policy">Cancellation Policy</string>
    <string name="free_cancellation_by_2_pm_3_days_prior_to_arrival_to_avoid_a_penalty_of_1_night_charge_plus_any_applicable_taxes_amp_fees"><![CDATA[Free cancellation by 2 PM-3 days prior to arrival to avoid a penalty of 1 night charge plus any applicable taxes & fees.]]></string>
    <string name="guarantee_policy">Guarantee Policy</string>
    <string name="reservations_must_be_guaranteed_by_credit_card_and_a_tokenization_will_be_done_via_the_payment_gateway">Reservations must be guaranteed by Credit Card and a tokenization will be done via the payment gateway.</string>
   <string name="last_name">Last Name</string>
   <string name="first_name">First Name</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="check_your_internet_connection_nand_try_again">Check your internet connection\nand try again</string>
    <string name="try_again">Try again</string>
    <string name="enter_gst_number">Enter GST number</string>
    <string name="write_special_request">Write special request</string>
    <string name="request_for_the_hotel">Request for the hotel</string>
    <string name="your_request_will_be_shared_with">Your request will be shared with hotels where you will be staying</string>
    <string name="_1800_characters_maximum_in_english_if_possible">1800 characters maximum, in English if possible.</string>
    <string name="_1800_characters_left_out_of_1800">1800 characters left out of 1800</string>
    <string name="primary_guest_details">Primary Guest Details</string>
    <string name="gst_number_optional">GST Number (Optional)</string>
    <string name="confirm_booking">Confirm Booking</string>
</resources>