<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.account.SpecialRequestActivity">

    <include
        android:id="@+id/layoutToolBar"
        layout="@layout/normal_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="@dimen/_8sdp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnSave"
        android:layout_below="@id/layoutToolBar"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text12RegularGray"
                android:singleLine="false"
                android:text="@string/special_request_desc" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text14RegularBlack"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/request_for_the_hotel" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text12RegularBlack"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:singleLine="false"
                android:text="@string/your_request_will_be_shared_with" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text10RegularGray"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/_1800_characters_maximum_in_english_if_possible" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/dr_white_fill_gray_border_10"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/EditTextParentStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    android:background="@null"
                    android:gravity="start" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="@dimen/_15sdp"
                    android:text="@string/_1800_characters_left_out_of_1800" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnSave"
        style="@style/ButtonParentStyle"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/save" />

</RelativeLayout>